@@ -13,6 +13,7 @@ xboxdrv 0.6.5 - (??/Jan/2011)
 * renamed --ui-new to --next
 * renamed --ui-toggle to --toggle
 * fixed incorrect endpoint detection for Xbox1 controller
+* native Playstation 3 USB controller support
 
 
 xboxdrv 0.6.4 - (13/Jan/2011)
